# Rakshak

./: .gitignore  README.md  build_app.bat  dev.bat  dev_mode.bat  requirements.txt  start.bat
backend/src-tauri/: Cargo.toml  build.rs  rakshak.manifest  tauri.conf.json
backend/src-tauri/src/: c2_engine.rs  defense.rs  detection.rs  entropy.rs  file_monitor.rs  kernel_bridge.rs  killswitch.rs  lib.rs  network_isolation.rs  rapid_detector.rs  response.rs  scanner.rs  state.rs  telemetry.rs  velocity.rs  vss_monitor.rs  watcher.rs  windows_util.rs
backend/src-tauri/test_scripts/: aggressive_attack.py  decrypt_test.py  encrypt_test.py  ransomware_simulator.py  run_tests.bat  run_tests.ps1  stress_test.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: file_monitor.rs  lib.rs  main.rs  rapid_detector.rs
frontend/src/components/background/: ParticleNetwork.tsx  ShieldWave.tsx
frontend/src/components/dashboard/: Dashboard.tsx  NetworkC2Monitor.tsx  Shield.tsx  SystemWatcher.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/overlay/: C2MonitorModal.tsx  ThreatOverlay.tsx
frontend/src/components/views/: AlertsView.tsx  ConnectionTest.tsx  ExpandedWatcher.tsx  FileScanner.tsx  SettingsView.tsx  ShieldStatusView.tsx
frontend/src/services/: tauriConnection.ts
