[package]
name = "rakshak"
version = "0.1.0"
description = "Rakshak — Early Ransomware Detection"
authors = ["you"]
edition = "2021"

[lib]
name = "rakshak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2.2.1"
tauri-plugin-dialog = "2.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
notify = { version = "7", features = ["macos_kqueue"] }
sysinfo = "0.33"
dirs = "6"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
] }
